# zingolabs_rust_primitives

./: Cargo.toml
architecture/: 0001-record-architecture-decisions.md  0002-store-low-primitive-collections-on-zlp-commons-crate.md
zlp_common/: Cargo.toml
zlp_common/src/: lib.rs
