[workspace]
members = ["zlp_common"]
resolver = "2"

[workspace.dependencies]
http = "1.1"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
prost = "0.13"
tonic = "0.12"
tower = "0.5"
portpicker = "0.1"

zcash_primitives = "0.19"
zcash_protocol = "0.5"