[workspace]
members = ["zlp_common"]
resolver = "2"

[workspace.dependencies]
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
prost = "0.14"
tonic = "0.14"
tower = "0.5"
portpicker = "0.1"

zcash_primitives = "0.24"
zcash_protocol = "0.6"
